--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
   <head>
-    <title>Final Project</title>
+    <title>Final Project for DSBA: 5122</title>
     <meta charset="utf-8" />
     <meta name="author" content="Dipin Kasana, Kelly O’Shields &amp; Josh Peterson" />
-    <meta name="date" content="2019-12-09" />
+    <meta name="date" content="2019-12-17" />
     <link href="libs/remark-css-0.0.1/default.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/metropolis.css" rel="stylesheet" />
     <link href="libs/remark-css-0.0.1/rutgers-fonts.css" rel="stylesheet" />
@@ -13,11 +13,11 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# Final Project
-## Nobel Prize Winners
+# Final Project for DSBA: 5122
+## Shiny Application for Nobel Prize Winners Data
 ### Dipin Kasana, Kelly O’Shields &amp; Josh Peterson
-### UNC Charlotte - DSBA: 5122
-### December 9, 2019
+### UNC Charlotte
+### December 17, 2019
 
 ---
 
@@ -110,7 +110,7 @@ class: center, middle, inverse, title-slide
 
 ### Production
 - Functions
-- Reactive functions
+- Reactive expressions
 - Breaking up the code
 
 ---
@@ -139,6 +139,7 @@ output$motivation_wordcloud &lt;- renderPlot({
 --
 
 1. Improve UI and visualizations for improved usability
+
   - Download buttons for tables
   - Improve reactivitity of plots and tables to filtering
   - Improve performance of application (caching of plots, analyze performance via shinyloadtest, etc.)
@@ -146,12 +147,14 @@ output$motivation_wordcloud &lt;- renderPlot({
 --
 
 1. Provide more analysis around potential biases and gaps
+
   - Better comparisons among groups of interest
   - Utilize statistical tests to potentially find evidence of bias 
   
 --
 
 1. Provide more support for insights
+
   - More descriptive language to help with interpretation
   - Provide more information concerning sample sizes, number of observations, etc.
 
